OpenAPI Specification change
- 公車 V2 新增逐筆更新資料。
- 軌道 V2 新增桃園捷運營運最新消息資料。
- 軌道 V2 新增桃園捷運營運通阻資料。
- 公車 V2 改版。
- 軌道 V2 台鐵車站資料新增必填欄位 `StationUID`。
